fixed alignment issues for the stepper form on mobile

--- a/angular/src/app/components/login/login.component.scss
+++ b/angular/src/app/components/login/login.component.scss
@@ -6,6 +6,16 @@
     @include loginAndGenericDisplay(3.7rem, 400);
     text-align: center;
   }
+  &-parent-btn-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 2rem;
+    @media (min-width: 500px) {
+      display: flex;
+      padding-top: 2rem;
+    }
+  }
   &-form-group {
     width: 55rem;
 
@@ -48,7 +58,7 @@
     @include fontSizeAndWeight(1.2rem, 400);
     display: flex;
     padding-top: 1rem;
-    height: 1.2rem;
+    text-align: center;
     justify-content: center;
     color: #fff;
   }
